@@ -201,6 +201,8 @@ x2goclient (4.0.4.0-0x2go1) UNRELEASED; urgency=low
     - onmainwindow.cpp: consolidate Windows and non-Windows sshd startup error
       message.
     - onmainwindow.cpp: typo fix (authoized_keys.)
+    - onmainwindow.cpp: stop exporting directories (Printing, File Sharing) on
+      sshd error.
 
  -- X2Go Release Manager <git-admin@x2go.org>  Thu, 19 Feb 2015 13:25:28 +0100
 
